--- a/Website Template by defilaunch/index.html
+++ b/Website Template by defilaunch/index.html
@@ -300,7 +300,7 @@ Youtube: https://youtube.com/@defilaunch -->
                       <h3 class="mt-4  text-uppercase" style="color: rgb(206, 100, 35); font-size: 35px;">HOW TO BUY TRUMP_FIT TOKEN</h3>
 
                       <p class="fs-6" style="font-size: 29px;">HAVE OR CREATE A PHANTOM WALLET<br><br>
-                        BUY SOLANA AND SEND IT YOUR WALLET<br><br>
+                        BUY SOLANA AND SEND IT TO YOUR WALLET<br><br>
                         CONNECT IT TO PUMP.FUN<br><br>
                         SWAP SOLANA FOR TRUMP_FIT.
                       </p>
